# FaceRecognition-OpenCV

./: CMakeLists.txt  LICENSE  README.md  main.cpp  script-build.bat
